--- a/charts/node-app/values.yaml
+++ b/charts/node-app/values.yaml
@@ -9,7 +9,8 @@ image:
   tag: "latest"
   pullPolicy: IfNotPresent
 
-imagePullSecrets: []
+imagePullSecrets:
+  - name: ecr-secret
 nameOverride: ""
 fullnameOverride: ""
 
